Added rabbitmq rpc component to the project. Required changes are made to the code for communication through rabbitMQ

--- a/microservice_one/pom.xml
+++ b/microservice_one/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
     <properties>
         <start-class>entry.AppMain</start-class>
