--- a/microservice_two/docker/Dockerfile
+++ b/microservice_two/docker/Dockerfile
@@ -1,9 +1,11 @@
 FROM ubuntu:16.04
 
 
-RUN apt-get update -y && \
-    apt-get install -y python-pip python-dev && \
-    apt-get install -y python-mysqldb
+#RUN apt-get update -y
+
+RUN apt-get install -y python-pip python-dev
+
+RUN apt-get install -y python-mysqldb
 
 # We copy just the requirements.txt first to leverage Docker cache
 COPY ./requirements.txt /app/requirements.txt
