--- a/api_gateway/pom.xml
+++ b/api_gateway/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <groupId>com.microservice.fb</groupId>
-    <artifactId>microserviceone</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.apigateway.fb</groupId>
+    <artifactId>apigateway</artifactId>
+    <version>1</version>
     <!-- https://mvnrepository.com/artifact/com.restfb/restfb -->
     <parent>
         <groupId>org.springframework.boot</groupId>
