--- a/microserviceone/pom.xml
+++ b/microserviceone/pom.xml
@@ -8,11 +8,14 @@
     <artifactId>microservice_one</artifactId>
     <version>1</version>
 
+
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.5.RELEASE</version>
     </parent>
+
 
     <dependencies>
         <dependency>
@@ -31,6 +34,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.2.0</version>
         </dependency>
     </dependencies>
     <properties>
