--- a/microserviceone/src/main/resources/application.properties
+++ b/microserviceone/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://db:3306/
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/
 spring.datasource.username=root
 spring.datasource.password=root
